Updated features like buttons

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/pasteldenata.html"><strong>Pastel de Nata</strong></a>
+        <h2><em>The portuguese sweet</em></h2>
+        <a href="recipes/pasteldenata.html">
+            <strong><h2>Pastel de Nata</h2></strong>
+        </a>
     </body>
 </html>
