--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Odin Recipes</title>
+        <title>Portuguese Cuisine</title>
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
+        <h1>Portuguese Cuisine</h1>
+        <img src="https://scontent.fosl3-2.fna.fbcdn.net/v/t39.30808-6/292589658_458721912927081_1309217945314803188_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=x3_MQ3GqFfkAX960HFx&_nc_ht=scontent.fosl3-2.fna&oh=00_AfCwQLt9q_bs7cKaBlkeWCuR3X_Cq8DlZclz2fhVE_c0UQ&oe=63D89638" alt="Cooking time">
         <h2><em>The portuguese sweet</em></h2>
         <a href="recipes/pasteldenata.html">
             <strong><h2>Pastel de Nata</h2></strong>
